[package]
name = "tuan-graph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
measure_time = "0.9.0"
ordered-float = { version = "5.0.0", features = ["serde"] }
oxc_allocator = "0.87.0"
oxc_ast = "0.87.0"
oxc_ast_visit = "0.87.0"
oxc_parser = "0.87.0"
oxc_resolver = "=11.5.0"
oxc_span = "0.87.0"
path-clean = "1.0.1"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
walkdir = "2.5.0"
yifan_hu = { git = "https://github.com/tuan-ide/yifan-hu-rs.git", branch = "main" }
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"

[dev-dependencies]
tempfile = "3.22.0"
test-log = { version = "*", features = ["trace"] }
