[package]
name = "tuan-labeler"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
convert_case = "0.8.0"
measure_time = "0.9.0"
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
swc_common = { version = "14.0.4", features = ["tty-emitter"] }
swc_ecma_lexer = "23.0.2"
oxc_allocator = "0.87.0"
oxc_ast = "0.87.0"
oxc_ast_visit = "0.87.0"
oxc_parser = { version = "0.87.0", features = ["benchmarking"] }
oxc_resolver = "=11.5.0"
oxc_span = "0.87.0"

[dev-dependencies]
