[package]
name = "tuan-labeler"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
convert_case = "0.8.0"
measure_time = "0.9.0"
rayon = "1.11.0"
oxc_allocator = "0.87.0"
oxc_parser = { version = "0.87.0", features = ["benchmarking"] }
oxc_span = "0.87.0"

[dev-dependencies]
