
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "core_graph"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
tuan-graph = { path = "../../crates/tuan-graph" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
