
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "core_labeler"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
tuan-labeler = { path = "../../crates/tuan-labeler" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
